Makes mash use ChromeNativeAppWindowViewsAura

Mash should really use ChromeNativeAppWindowViewsAuraAsh, but that
depends upon a bunch of types in ash. So, make mash use
ChromeNativeAppWindowViewsAura, which isn't perfect, but at least it
doesn't crash.

BUG=679028
TEST=none
R=msw@chromium.org

Review-Url: https://codereview.chromium.org/2617923004
Cr-Commit-Position: refs/heads/master@{#442067}

Former-commit-id: 148ae8075bfdc22e122b3307d3344337db12d00c